# ZeroToken

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  examples.py  examples_stability.py  mcp_server.py  mcp_server_http.py  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/plans/: 2025-03-07-zerotoken-adaptive-design.md  2025-03-07-zerotoken-adaptive-implementation.md  2025-03-07-zerotoken-improvements-design.md  2025-03-07-zerotoken-improvements-implementation.md  2025-03-07-zerotoken-trajectory-delete-design.md  2025-03-07-zerotoken-trajectory-delete-implementation.md
memory/: MEMORY.md  controller-trajectory-analysis.md  recording-replay-flow.md
skills/zerotoken-openclaw/: SKILL.md
tests/: __init__.py  requirements.txt  test_adaptive.py  test_adaptive_storage.py  test_controller.py  test_dfu_storage.py  test_fuzzy_point.py  test_recovery.py  test_script_bindings.py  test_script_engine.py  test_script_engine_pause_resume.py  test_script_engine_run.py  test_script_generator.py  test_selector.py  test_storage.py  test_trajectory.py  test_trajectory_db.py  test_wait_strategy.py
zerotoken/: __init__.py  adaptive.py  adaptive_storage.py  controller.py  recovery.py  selector.py  stealth.py  storage.py  storage_sqlite.py  trajectory.py  wait_strategy.py
zerotoken/engine/: __init__.py  script_engine.py  script_generator.py
