[project]
name = "zerotoken"
version = "0.1.0"
description = "ZeroToken - Record once, automate forever. A lightweight MCP for agent-driven browser automation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "apscheduler>=3.10.4",
    "mcp[cli]>=1.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
