[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotoken"
version = "0.3.0"
description = "ZeroToken - Record once, automate forever. A lightweight MCP for agent-driven browser automation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "apscheduler>=3.10.4",
    "mcp[cli]>=1.0.0",
    "build>=1.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
]

[project.scripts]
zerotoken-mcp = "mcp_server:run"
zerotoken-mcp-http = "mcp_server_http:run"

[project.urls]
Homepage = "https://github.com/AMOS144/zerotoken"
Repository = "https://github.com/AMOS144/zerotoken"

[tool.setuptools.packages.find]
include = ["zerotoken*"]

[tool.setuptools]
py-modules = ["mcp_server", "mcp_server_http"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
